--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,13 @@
   <app-panel-wrapper></app-panel-wrapper>
 </div> -->
 
-<div class="container">
-  <div class="row w-75 mx-auto">
-    <app-panel-wrapper></app-panel-wrapper>
+<div class="container-fluid">
+  <div class="row justify-content-center mx-auto">
+    <div class="col">
+      <app-panel-wrapper title="Distribution Pump 1"></app-panel-wrapper>
+    </div>
+    <div class="col">
+      <app-panel-wrapper title="Distribution Pump 2"></app-panel-wrapper>
+    </div>
   </div>
 </div>
