--- a/src/app/display-panel/panel-wrapper/panel-wrapper.component.html
+++ b/src/app/display-panel/panel-wrapper/panel-wrapper.component.html
@@ -1,6 +1,6 @@
-<div class="panel-wrapper d-flex flex-column p-2 bg-dark text-white rounded-3 text-center">
-    <h4>Distribution Pump 1</h4>
-    <app-progress-bar></app-progress-bar>
+<div class="panel-wrapper d-flex flex-column mx-auto p-2 bg-dark text-white rounded-3 text-center">
+    <h4>{{title}}</h4>
+    <app-progress-bar [title]="title"></app-progress-bar>
     <div class="d-flex flex-column">
         <p class="mb-0 panel-label">HOA:  REMOTE</p>
         <p class="mb-0 panel-label">ERT:  1986 HRS</p>
