--- a/src/app/display-panel/panel-wrapper/panel-wrapper.component.html
+++ b/src/app/display-panel/panel-wrapper/panel-wrapper.component.html
@@ -1,6 +1,6 @@
 <div class="panel-wrapper d-flex flex-column mx-auto p-2 bg-dark text-white rounded-3 text-center">
-    <h4>{{title}}</h4>
-    <app-progress-bar [title]="title"></app-progress-bar>
+    <h4>Distribution Pump {{pumpId}}</h4>
+    <app-progress-bar [pumpId]="pumpId" [pumpData$]="pumpData$"></app-progress-bar>
     <div class="d-flex flex-column">
         <p class="mb-0 panel-label">HOA:  REMOTE</p>
         <p class="mb-0 panel-label">ERT:  1986 HRS</p>
@@ -11,7 +11,7 @@
     </div>
     <div class="d-flex mb-1 px-2 py-1 bg-secondary rounded-3">
         <p class="me-auto my-auto">MANUAL START</p>
-        <button class="btn btn-success btn-sm" (click)="manualMode()">START</button>
+        <button class="btn btn-success btn-sm">START</button>
     </div>
     <div class="d-flex flex-column px-2 py-1 bg-secondary rounded-3">
         <p class="me-auto my-auto">MANUAL SPEED</p>
