--- a/src/app/display-panel/progress-bar/progress-bar.component.html
+++ b/src/app/display-panel/progress-bar/progress-bar.component.html
@@ -1,5 +1,4 @@
 <div style="width:200px;height:200px;" class="text-white mx-auto">
     <canvas style="width:200px;height:200px;" id="progressBar" #progressBar></canvas>
-    <h4 class="chart-label">{{controlService.currentPumpLevel$ | async}}%</h4>
-    <!-- <h4 class="chart-label">{{pumpData}}%</h4> -->
+    <h4 class="chart-label">{{ pumpData$ | async }}%</h4>
 </div>
